--- a/app/src/main/res/layout/activity_responsibilities_view.xml
+++ b/app/src/main/res/layout/activity_responsibilities_view.xml
@@ -1,107 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
-    android:fillViewport="true">
+    android:background="@color/background">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/addNewBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/selectedResponsibility"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_custom_add" />
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
-        tools:context=".SubjectsView">
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/searchBar"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="60dp"
-            android:layout_marginEnd="20dp"
-            android:background="@drawable/custom_input"
-            android:ems="10"
-            android:gravity="center"
-            android:hint="Szukaj..."
-            android:inputType="textPersonName"
-            android:padding="12dp"
-            android:textAlignment="center"
-            android:textColor="@color/textColor"
-            android:textColorHint="@color/hintColor"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="@color/background"
+            tools:context=".SubjectsView">
 
-        <RadioGroup
-            android:id="@+id/importanceRadioGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchBar">
+            <EditText
+                android:id="@+id/searchBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/custom_input"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="Szukaj..."
+                android:inputType="textPersonName"
+                android:padding="12dp"
+                android:textAlignment="center"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/hintColor"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <RadioButton
-                android:id="@+id/normalImportance"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_margin="16dp"
-                android:background="@drawable/radio_normal_selector"
-                android:button="@android:color/transparent"
-                android:padding="16dp" />
+            <RadioGroup
+                android:id="@+id/importanceRadioGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchBar">
 
-            <RadioButton
-                android:id="@+id/mediumImportance"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_margin="16dp"
-                android:background="@drawable/radio_medium_selector"
-                android:button="@android:color/transparent"
-                android:padding="16dp" />
+                <RadioButton
+                    android:id="@+id/normalImportance"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_margin="16dp"
+                    android:background="@drawable/radio_normal_selector"
+                    android:button="@android:color/transparent"
+                    android:padding="16dp" />
 
-            <RadioButton
-                android:id="@+id/highImportance"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_margin="16dp"
-                android:background="@drawable/radio_high_selector"
-                android:button="@android:color/transparent"
-                android:padding="16dp" />
+                <RadioButton
+                    android:id="@+id/mediumImportance"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_margin="16dp"
+                    android:background="@drawable/radio_medium_selector"
+                    android:button="@android:color/transparent"
+                    android:padding="16dp" />
 
-        </RadioGroup>
+                <RadioButton
+                    android:id="@+id/highImportance"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_margin="16dp"
+                    android:background="@drawable/radio_high_selector"
+                    android:button="@android:color/transparent"
+                    android:padding="16dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/responsibilitiesRV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="70dp"
-            android:layout_marginEnd="10dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addNewBtn"
-            app:layout_constraintVertical_bias="0.0" />
+            </RadioGroup>
 
-        <Button
-            android:id="@+id/addNewBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/next_button"
-            android:padding="15dp"
-            android:text="Dodaj"
-            android:textColor="@color/textColor"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/responsibilitiesRV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup"
+                app:layout_constraintVertical_bias="0.09" />
 
-</ScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
