--- a/app/src/main/res/drawable/radio_responsibility.xml
+++ b/app/src/main/res/drawable/radio_responsibility.xml
@@ -4,12 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="5dp" />
             <solid android:color="@color/selectedResponsibility" />
-            <padding
-                android:bottom="4dp"
-                android:left="4dp"
-                android:right="4dp"
-                android:top="4dp" />
-            <stroke android:width="8px" android:color="@color/selectedButton"/>
+            <padding android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp" />
         </shape>
 
     </item>
