--- a/app/src/main/res/layout/activity_add_responsibility.xml
+++ b/app/src/main/res/layout/activity_add_responsibility.xml
@@ -10,16 +10,44 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/noteTitle"
+            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="20dp"
+            android:background="@drawable/custom_textview"
+            android:hint="Nazwa zadania"
+            android:textColorHint="@color/hintColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/respName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
+        </com.google.android.material.textfield.TextInputLayout>
 
 
         <Spinner
             android:id="@+id/assignedSubjectTV"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="35dp"
+            android:padding="10dp"
             android:background="@android:color/transparent"
             android:ems="10"
             android:minHeight="48dp"
@@ -71,10 +99,11 @@
         <Spinner
             android:id="@+id/subjectTypeSpinner"
             android:layout_width="match_parent"
-            android:layout_height="52dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="35dp"
+            android:padding="10dp"
             android:background="@android:color/transparent"
             android:ems="10"
             android:minHeight="48dp"
@@ -186,45 +215,27 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/noteDescription" />
 
-        <EditText
-            android:id="@+id/noteTitle"
-            android:layout_width="300dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/custom_textview"
-            android:ems="10"
-            android:hint="Tytuł"
-            android:inputType="textPersonName"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:textColor="@color/textColor"
-            android:textColorHint="@color/hintColor"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.495"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/noteDescription"
+            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="35dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/custom_textview"
-            android:ems="10"
             android:hint="Opis"
-            android:inputType="textCapSentences|textMultiLine"
-            android:maxLength="2000"
-            android:padding="20dp"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:textColor="@color/textColor"
             android:textColorHint="@color/hintColor"
-            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup" />
+            app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/respDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/textView9"
