--- a/app/src/main/res/layout/activity_subjects_view.xml
+++ b/app/src/main/res/layout/activity_subjects_view.xml
@@ -96,15 +96,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="10dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addNewSubject"
-                app:layout_constraintVertical_bias="0.197" />
+                app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup"
+                app:layout_constraintVertical_bias="0.075" />
 
             <TextView
                 android:id="@+id/textView7"
