--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,60 +12,67 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <TextView
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="32dp"
             android:text="Najbliższe zadania i zaliczenia"
             android:textColor="@color/textColorDarken"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.087"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/profileNameTV" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/profileNameTV"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="@color/accentColor"
-            android:orientation="horizontal"
+            android:layout_margin="18dp"
+            android:text="Informatyka 8"
+            android:textColor="@color/textColor"
+            android:textSize="29sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/profileNameTV"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="18dp"
-                android:text="Informatyka 8"
-                android:textColor="@color/textColor"
-                android:textSize="29sp" />
-
-            <Button
-                android:id="@+id/button"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="14dp"
-                android:background="@drawable/ic_settings_vector" />
-        </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/importantResp"
-            android:layout_width="match_parent"
+            android:id="@+id/importantRespRV"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="24dp"
-            android:layout_marginEnd="10dp"
             android:orientation="horizontal"
-            android:padding="20dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <TextView
+            android:id="@+id/textView22"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="44dp"
+            android:text="Zaległe zadania i zaliczenia"
+            android:textColor="@color/textColorDarken"
+            android:textSize="17sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.093"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/importantRespRV" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/overdueRespRV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
@@ -216,13 +223,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:layout_marginTop="68dp"
+            android:layout_marginTop="36dp"
             android:layout_marginEnd="2dp"
             android:paddingBottom="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/importantResp">
+            app:layout_constraintTop_toBottomOf="@+id/overdueRespRV">
 
             <LinearLayout
                 android:layout_width="wrap_content"
