--- a/app/src/main/res/layout/recyclerview_subject_row.xml
+++ b/app/src/main/res/layout/recyclerview_subject_row.xml
@@ -14,7 +14,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rowLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/cardBackground">
 
         <TextView
@@ -26,7 +26,7 @@
             android:padding="12dp"
             android:text="Analiza matematyczna"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             android:background="@color/cardBackground2"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -72,13 +72,13 @@
             android:id="@+id/progressTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="start"
             android:padding="10dp"
             android:text="W trakcie"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:background="@color/cardBackgroundFinished"
-            android:textSize="20sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/importanceLabel"
