--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_margin="18dp"
-            android:text="Informatyka 8"
+            android:gravity="center"
+            android:text="Semestr 8"
             android:textColor="@color/textColor"
             android:textSize="29sp"
             app:layout_constraintEnd_toEndOf="parent"
