--- a/app/src/main/res/layout/activity_responsibilities_view.xml
+++ b/app/src/main/res/layout/activity_responsibilities_view.xml
@@ -16,7 +16,8 @@
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_custom_add" />
+        app:srcCompat="@drawable/ic_custom_add"
+        tools:ignore="ContentDescription" />
 
     <EditText
         android:id="@+id/searchBar"
