--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,14 +21,17 @@
     <color name="mediumImportanceSelected">#75670B</color>
     <color name="highImportanceSelected">#670909</color>
     <color name="hintColor">#949296</color>
-    <color name="unselectedButton">#43394C</color>
-    <color name="unselectedEditText">#332A3C</color>
+    <color name="unselectedButton">#4A2E2E</color>
+    <color name="unselectedEditText">#4A2E2E</color>
     <color name="selectedButton">#74299F</color>
     <color name="removeButton">#B646F6</color>
     <color name="accentColor">#2A2B2C</color>
-    <color name="selectedResponsibility">#52528A</color>
+    <color name="selectedResponsibility">#EF5350</color>
     <color name="cardBackground">#49474B</color>
     <color name="cardBackground2">#383739</color>
     <color name="cardBackgroundFinished">#171618</color>
     <color name="lightButtons">#8AFFFFFF</color>
+    <color name="darkAccent">#090909</color>
+    <color name="buttonColor">#EF5350</color>
+    <color name="buttonColorPressed">#AA3C3A</color>
 </resources>
