--- a/app/src/main/res/layout/activity_responsibilities_view.xml
+++ b/app/src/main/res/layout/activity_responsibilities_view.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/custom_input"
         android:ems="10"
@@ -41,57 +41,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioGroup
-        android:id="@+id/importanceRadioGroup"
-        android:layout_width="wrap_content"
+    <Spinner
+        android:id="@+id/sortSpinner"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
+        android:layout_marginStart="35dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="35dp"
+        android:background="@android:color/transparent"
+        android:ems="10"
+        android:minHeight="48dp"
+        android:padding="10dp"
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar">
-
-        <RadioButton
-            android:id="@+id/normalImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_normal_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-        <RadioButton
-            android:id="@+id/mediumImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_medium_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-        <RadioButton
-            android:id="@+id/highImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_high_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-    </RadioGroup>
+        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/responsibilitiesRV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup"
-        app:layout_constraintVertical_bias="0.09" />
+        app:layout_constraintTop_toBottomOf="@+id/sortSpinner" />
 </androidx.constraintlayout.widget.ConstraintLayout>
