--- a/app/src/main/res/layout/activity_responsibility_info.xml
+++ b/app/src/main/res/layout/activity_responsibility_info.xml
@@ -138,7 +138,7 @@
             app:layout_constraintTop_toBottomOf="@+id/dateDueId">
 
             <com.google.android.material.textfield.MaterialAutoCompleteTextView
-                android:id="@+id/descriptionET"
+                android:id="@+id/noOfSubjectsTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clickable="false"
